--- a/Scrumboard/Views/Home/About.cshtml
+++ b/Scrumboard/Views/Home/About.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About Us";
+    ViewBag.Title = ViewRes.HomeStrings.AboutPage;
 }
 
-<h2>About</h2>
-<p>
-     Put content here.
+<h2>@ViewRes.HomeStrings.AboutPage</h2>
+<p>    
 </p>
