--- a/Scrumboard/Content/Site.css
+++ b/Scrumboard/Content/Site.css
@@ -5,7 +5,8 @@ to use a different color start by replacing all instances of
 ----------------------------------------------------------*/
 body
 {
-    background-color: #5c87b2;
+    /*background-color: #5c87b2;*/
+    background-color: White;
     font-size: 75%;
     font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
     margin: 0;
