--- a/Scrumboard/Views/Home/Index.cshtml
+++ b/Scrumboard/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = ViewRes.HomeStrings.HomePage;
 }
 
-<h2>@ViewBag.Message</h2>
-<p>
-    To learn more about ASP.NET MVC visit <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
+<h2>@ViewRes.HomeStrings.HomePage</h2>
+<p>    
 </p>
