--- a/Scrumboard/Views/Home/Login.cshtml
+++ b/Scrumboard/Views/Home/Login.cshtml
@@ -5,3 +5,10 @@
 
 <h2>@ViewRes.SharedStrings.Login</h2>
 
+<form method="post" action="">
+    <fieldset>
+        <legend>@ViewRes.HomeStrings.LoginInvitation</legend>
+        <label for="username">@ViewRes.HomeStrings.Username :</label>        
+        <input type="text" id="username" title="@ViewRes.HomeStrings.Username" />
+    </fieldset>
+</form>
